--- a/SistemaHospitalUNI/src/MenuSistema/SistemaPrincipal.form
+++ b/SistemaHospitalUNI/src/MenuSistema/SistemaPrincipal.form
@@ -212,6 +212,9 @@
                     </Property>
                     <Property name="text" type="java.lang.String" value="Facura Examenes y Procedimientos"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuExayProcActionPerformed"/>
+                  </Events>
                 </MenuItem>
               </SubComponents>
             </Menu>
